# recognizer

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml
src/: etl.py  main.py  model.py
src/_/: __init__.py  fnames.py
